--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
-    <string name="app_name">KBC Application1</string>
+    <string name="app_name">KBC\n손전등</string>
+    <string name="camera_shot">찍자</string>
+    <string name="flash_on">On</string>
+    <string name="flash_off">Off</string>
+    <string name="permlab_flashlight">flashlight</string>
 </resources>
